# TimeSeries

./: CMakeLists.txt  GaussianGenerator.cpp  KNN.cpp  SinWaweGenerator.cpp  StepGenerator.cpp  TimeSeriesDataset.cpp  TimeSeriesGenerator.cpp  main.cpp
headers/: GaussianGenerator.h  KNN.h  SinWaweGenerator.h  StepGenerator.h  TimeSeriesDataset.h  TimeSeriesGenerator.h
